# Site-a-choupinette

./: Cargo.toml  Rocket.toml
db/: db.sqlite
src/: main.rs  task.rs  tests.rs
static/css/: style.css
template/: base.html.tera  index.html.tera
