[package]
name = "site-a-choupinette"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket ="0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
log = "0.4"

[dev-dependencies]
parking_lot = {version="0.11", features = ["nightly"] }
rand = "0.7"

[dependencies.rocket_contrib]
version="0.4.5"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
